--- a/Invessence/modules/web/src/main/webapp/resources/uob/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/css/uob.css
@@ -2844,3 +2844,270 @@ border: solid 1px #26a69a!important;
     }
 }
 /**/
+
+
+/************************New Version Dashboard******************************/
+
+/*dropdown*/
+.customMenuButtonDashboard > button > span:nth-child(1) {
+    /*     background-color: black!important; */
+    border-radius: 16px!important;
+    background-size: 12px!important;
+    background-image: url("/javax.faces.resource/images/down.png.xhtml?ln=tcm")!important;
+}
+
+.InfoNewDash > button > span:nth-child(2) {
+    background: #ECEFF1!important;
+    color: #778D9B!important;
+    border-radius: 40px!important;
+    font-size: 13px;
+}
+
+.InfoNewDash > button {
+    border-radius: 40px!important;
+}
+
+@media (min-width: 745px) {
+    .dsahboardEditDropdownBlock {
+        float: right;
+        margin-right:5px;
+    }
+}
+
+@media (max-width: 744px) and (min-width: 736px) {
+    .editDropdownSelect > .ui-selectonemenu-trigger {
+        height: 30px!important;
+    }
+}
+
+@media (max-width: 735px) {
+    .editDropdownSelect > .ui-selectonemenu-trigger {
+        height: 27px!important;
+    }
+}
+
+@media (max-width: 744px) {
+    .dsahboardEditDropdownBlock {
+        position: absolute;
+        right: 0;
+        margin-top: -85px;
+        width: 225px;
+    }
+
+    .editDropdownSelect > .ui-selectonemenu-trigger > span	{
+        margin-top: 5px!important;
+    }
+
+
+}
+
+@media (max-width: 370px) {
+    .dsahboardEditDropdownBlock {
+        width: 200px;
+    }
+}
+
+.dropdownDashboardTable {
+    position: absolute;
+    right: 240px;
+    margin-top: 7px;
+}
+
+.editDropdownSelect > label {
+    font-size: 13px!important;
+}
+
+.editDropdownSelect {
+    border-radius: 0px!important;
+    border-color: #c3ccd5!important;
+}
+
+.editDropdownSelect > .ui-selectonemenu-trigger {
+    border-radius: 0px!important;
+    background: #ced2d4!important;
+    border: 1px solid #c3ccd5!important;
+    height: 31px;
+}
+/**/
+.topAdjustCustomFunding {
+    position: relative;
+    top: 7px;
+}
+@media (max-width: 744px) {
+
+    /* .NewDashTable > tbody > tr > td:nth-child(1), .NewDashTable > tbody > tr > td:nth-child(3) {
+    width: 50%!important;
+    }
+     */
+    /* dec21*/
+
+    .NewDashTable2 > tbody > tr {
+        display: inline-block;
+    }
+
+    .NewDashTable2 > tbody > tr:nth-child(2) {
+        display: none!important;
+    }
+
+    .NewDashTable2 > tbody > tr:nth-child(1) {
+        width: 30%!important;
+        float: left;
+    }
+
+    .NewDashTable2 > tbody > tr:nth-child(3) {
+        display: table!important;
+        width: 70%!important;
+        float: right;
+    }
+
+    /**/
+    .InfoNewDash {
+        float: none;
+    }
+
+    .CustomWidthColumn_d_2_newDash {
+        text-align: center;
+    }
+
+    .NewDashButtonBlock {
+        width: 32%!important;
+    }
+
+    .NewDashTable, .NewDashTable2 {
+        width: 100%!important;
+    }
+
+
+}
+
+@media (max-width: 735px) {
+    .acctOverviewLabel {
+        padding: 5px 0px 10px 10px!important;
+    }
+}
+
+@media (max-width: 1000px) {
+
+    .ButtonConDashBlock {
+        display: none;
+    }
+
+    .NewDashTable > tbody > tr > td:nth-child(2) {
+        display:none;
+    }
+
+
+    .NewDashTable > tbody > tr > td, .NewDashTable2 > tbody > tr > td {
+        font-size: 14px!important;
+    }
+}
+
+
+.dashExtraInfoTable > tbody > tr > td  {
+    padding: 5px 0px;
+    text-align: left;
+}
+
+.textRAlign {
+    text-align: right;
+}
+
+.ContentTitleDash {
+    font-size: 12px;
+    width: 100%;
+}
+
+.ContentForTitleDash {
+    font-weight: bold;
+    width: 100%;
+    display: inline-block;
+}
+
+.CustomWidthColumn_d_2_newDash {
+    font-size: 14px;
+    height: 55px!important;
+    padding: 0px 10px!important;
+}
+
+.NewDashTable2 {
+    width: 40%;
+    float: left;
+}
+
+.NewDashTable {
+    width: 60%;
+    float: left;
+}
+
+.AdvisorConsumerName {
+    font-size: 14px;
+    padding: 8px 0px;
+}
+
+.AdvisorConsumerName {
+    text-align: center;
+}
+
+.AdvisorUserName, .CreateAccount_d {
+    margin: 0 10px;
+    padding: 5px 5px;
+    background: #fbfbfb;
+    box-shadow: 1px 1px 2px rgba(123, 116, 116, 0.72);
+}
+
+.CustomWidthColumn_d {
+    width: 20%;
+}
+
+.CustomWidthColumn_d_2 {
+    width: 40%;
+}
+
+.NewDashButtonBlock {
+    width: 30%;
+    text-align: center;
+    float: right;
+}
+
+.DashboardBlock_d {
+    width: 100%;
+    background: #FAFAFA;
+    padding: 0px!important;
+    border-left: 4px solid #26a69a!important;
+    border: 0;
+    border-radius: 0;
+    box-shadow: 1px 1px 1px rgba(123, 116, 116, 0.14);
+}
+
+.NewDashTable > tbody > tr > td, .NewDashTable2 > tbody > tr > td {
+    font-size: 14px;
+    height: 55px!important;
+    padding: 0px 5px!important;
+}
+
+.InfoNewDash > span:nth-child(2) {
+    background: #ECEFF1!important;
+    color: #778D9B!important;
+    border-radius: 40px!important;
+    font-size: 13px;
+}
+
+.InfoNewDash {
+    border-radius: 40px!important;
+}
+
+.tableCustomSeperater {
+    width: 100%;
+    height: 0!important;
+}
+
+
+.tableCustomSeperater > td {
+    height: 2px!important;
+    background: linear-gradient(to right, #307a5d 0%, transparent 98%);
+}
+
+.acctOverviewLabel {
+    padding: 0px 0px 10px 10px;
+}
+/************************/
