--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -4,6 +4,18 @@
  * CUSTOM BACKGROUND STYLE BASED ON THEME OPTION PAGE CHOICES
  * ----------------------------------------------------------*/
 
+
+.selectClientInv {
+	padding: 10px;
+	-webkit-filter: grayscale(1);
+}
+
+.selectClientInvSelected {
+	-webkit-filter: grayscale(0)!important;
+	border: 1px solid #013b4d!important;
+	box-shadow: 1px 1px 3px grey;
+}
+
 .ui-growl {
     position:fixed;
     top: 40% !important;
@@ -279,7 +291,7 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 }
 
 .StepsQuestionsFS {
-	font-size: 16px!important;
+	font-size: 15px!important;
 	}
 
 .selectOptionAlign {
@@ -337,7 +349,7 @@ table.jqplot-table-legend, table.jqplot-cursor-legend {
 
 @media (min-width: 1200px) {
 	.StepsQuestionsFSpg3 {
-	margin-top: 70px!important;
+	margin-top: 10px!important;
 	}
 	
 	.StepsQuestionsFSpg2 {
