--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -16,6 +16,33 @@
 	box-shadow: 1px 1px 3px grey;
 }
 
+/*Loader*/
+.tcmLoaderBackground > div:nth-child(1) {
+	pointer-events: none;
+	position: fixed;
+	background: rgba(0, 0, 0, 0.63);
+	top: 0;
+	bottom: 0;
+	left: 0;
+	right: 0;
+	text-align: center;
+	z-index: 9999999999999;
+	padding: 260px 0;
+}
+
+.tcmLoaderBackground > div > img {
+	height: 60px;
+	width: 60px;
+}
+
+@media (max-width: 600px) {
+	.tcmLoaderBackground > div > img {
+		height: 40px;
+		width: 40px;
+	}
+}
+/**/
+
 .ui-growl {
     position:fixed;
     top: 40% !important;
@@ -979,6 +1006,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 .ui-paginator-top,
 .ui-paginator-bottom,
 .AdvisorGridtcmLayout .ui-datatable-footer,
+.AdvisorGridtcmLayout .ui-datatable-header,
 .advisorMsgTable .ui-datatable-footer {
 	background: #FFFFFF!important;
 }
