Checked in 01/06/2017 Ticket 209,215,273,283,173

--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1007,6 +1007,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 .ui-paginator-bottom,
 .AdvisorGridtcmLayout .ui-datatable-footer,
 .AdvisorGridtcmLayout .ui-datatable-header,
+.advisorMsgTable .ui-datatable-header,
 .advisorMsgTable .ui-datatable-footer {
 	background: #FFFFFF!important;
 }
