--- a/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/css/tcm.css
@@ -3869,3 +3869,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
     margin-bottom: 0!important;
 }
 }*/
+
+.disableAcctTypePanel {
+    display: none;
+}
