--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1016,6 +1016,7 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 .AdvisorGridtcmLayout .ui-datatable-header,
 .advisorMsgTable .ui-datatable-header {
 	position: absolute;
+	display: none;
 }
 
 @media (max-width: 600px) and (min-width: 320px) {
@@ -1028,11 +1029,11 @@ tbody > tr > .AdvtcmLayoutColumn > span:nth-child(2) {
 	.centerAlign {
 		text-align: center!important;
 	}
-	
+
 	.ui-paginator-rpp-options {
 		display: block;
 		margin: 0 auto !important;
-		
+
 	}
 }
 
