Checked in 20/01/2017 For Change Address & ADV Form Generation  By Sagar

--- a/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/layoutmenu.xhtml
@@ -15,10 +15,12 @@
 
             <p:menuitem value="New Account" rendered="#{webutil.hasrole()!='advisor'}"
                         actionListener="#{uiLayout.doMenuAction('consumer', 'cadd.xhtml?app=N')}"/>
-            <p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.hasrole()!='advisor'}"
-                        actionListener="#{aggrBean.startup('D')}" />
+
 
         </ps:menu>
     </h:form>
 
 </ui:composition>
+
+<!--<p:menuitem value="Aggregation" style="margin: 0px 20px;" rendered="#{webutil.hasrole()!='advisor'}"-->
+            <!--actionListener="#{aggrBean.startup('D')}" />-->
