--- a/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/spark/topbar.xhtml
@@ -25,14 +25,9 @@
                         </ui:fragment>
                     </li>
 
-                    <li class="MobileModeOnly">
-                            <!--<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>-->
-                            <!--<a href="/pages/consumer/tcm/aggr/register.xhtml" class="Animated05">Aggregation</a>-->
-                        <h:form>
-                            <h:commandLink action="#{aggrBean.startup('M')}" value="Aggregation" styleClass="Animated05">
-                        </h:commandLink></h:form>
 
-                    </li>
+
+                    <!--</li>-->
                     <li class="MobileModeOnly">
                         <a href="#{uiLayout.defaultHome}" class="Animated05"><i class="fa fa-home"></i> Dashboard</a>
                     </li>
@@ -74,3 +69,9 @@
     </div>
 
 </ui:composition>
+        <!--<li class="MobileModeOnly">-->
+        <!--&lt;!&ndash;<a href="/pages/consumer/tcm/cadd.xhtml?app=N" class="Animated05"><i class="fa fa-plus-square"></i> New Account</a>&ndash;&gt;-->
+        <!--&lt;!&ndash;<a href="/pages/consumer/tcm/aggr/register.xhtml" class="Animated05">Aggregation</a>&ndash;&gt;-->
+        <!--<h:form>-->
+        <!--<h:commandLink action="#{aggrBean.startup('M')}" value="Aggregation" styleClass="Animated05">-->
+        <!--</h:commandLink></h:form>-->
