Prashant Revised 01/20/2017 - Fixed Google analytics

--- a/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
@@ -31,7 +31,7 @@
         <h:outputStylesheet name="#{uiLayout.webProfile.customcss}" library="#{uiLayout.webProfile.cssdir}"/>
     </ui:fragment>
     <ui:fragment rendered="#{uiLayout.webProfile.hasGoogleAnalytic}">
-        <h:outputStylesheet name="#{uiLayout.webProfile.googleAnalytic}"
+        <h:outputScript name="#{uiLayout.webProfile.googleAnalytic}"
                             library="#{uiLayout.webProfile.cssdir}"/>
     </ui:fragment>
 
