--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
@@ -1204,6 +1204,7 @@ img.riskImage:hover {
     background: whitesmoke!important;
     color: #778D9B!important;
     border-radius: 40px!important;
+    border: solid 2px #009abb;
     font-size: 13px;
 }
 
@@ -1465,6 +1466,7 @@ img.riskImage:hover {
 .InfoNewDash > span:nth-child(2) {
     background: whitesmoke!important;
     color: #778D9B!important;
+    border: solid 2px #009abb;
     border-radius: 40px!important;
         font-size: 13px;
 }
