--- a/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
@@ -940,7 +940,9 @@ img.atCheckMarkImg {
     background: #f2f2f2!important;
 }
 
-.ui-datatable table thead tr th, .ui-datatable table tfoot tr td, .ui-datatable table thead tr th {
+.uob_graphTable table thead tr th,
+.uob_graphTable table tfoot tr td,
+.uob_graphTable table thead tr th {
     color: #ffffff!important;
     background-color: #919d9d!important;
 }
@@ -1301,13 +1303,13 @@ Panel-UI > div {
     text-transform: uppercase !important;
 }
 
-tcmAccordionPanel-UI > .ui-accordion .ui-state-hover, .ui-accordion .ui-state-active {
+.tcmAccordionPanel-UI > .ui-accordion .ui-state-hover, .ui-accordion .ui-state-active {
     background-color: #05AF6C !important;
     color: #FFFFFF !important;
 }
 
 .ui-tabs-top .ui-tabs-nav {
-    background: #8F9D9D !important;
+    background: transparent!important;
 }
 
 .ui-accordion .ui-accordion-header .ui-icon {
@@ -1432,7 +1434,8 @@ tcmAccordionPanel-UI > .ui-accordion .ui-state-hover, .ui-accordion .ui-state-ac
 body {
     background-image: none !important;
     height: 100vh;
-    background: linear-gradient(141deg, rgba(0, 93, 56, 0.78) 0%, rgba(0, 89, 55, 0.87) 51%, rgba(0, 66, 40, 0.95) 75%) !important;
+    /*background: linear-gradient(141deg, rgb(91, 216, 204) 0%, rgb(52, 179, 167) 51%, rgb(53, 119, 113) 75%) !important;*/
+    background: #004D40!important;
 }
 
 .ui-message-error {
@@ -2766,7 +2769,7 @@ background: #26a69a;
 }
 
 .uob_selectDropdown > label {
-	padding: 11px 9px!important;
+	padding: 9px 9px!important;
     background: none!important;
 }
 
@@ -2790,7 +2793,7 @@ border: 4px solid #26a69a !important;
 }
 
 .ui-inputfield.ui-state-hover, .ui-inputfield.ui-state-focus {
-border: solid 1px #26a69a!important;
+border: solid 1px #000000!important;
 }
 
 .ui-inputfield {
@@ -3110,4 +3113,104 @@ border: solid 1px #26a69a!important;
 .acctOverviewLabel {
     padding: 0px 0px 10px 10px;
 }
+
+
+.ui-panelgrid-content, .ui-fieldset-content, .ui-datatable table tbody tr td, .ui-panel .ui-panel-content, .ui-selectoneradio label {
+    color: #000000!important;
+}
+
+.input, .ui-selectonemenu, .ui-selectcheckboxmenu {
+color: #025d3c!important;
+}
+
+.ui-selectcheckboxmenu.ui-state-focus, .ui-selectonemenu.ui-state-focus {
+    border:solid 1px #000000!important;
+}
+
+.uob_ceditTab_Block .ui-tabs-nav li.ui-tabs-selected, .uob_ceditTab_Block .ui-tabs-nav li.ui-tabs-active, .uob_ceditTab_Block .ui-tabs-nav li.ui-state-hover {
+    background-color: #ffffff!important;
+}
+
+.NBwidget > .ui-tabs-nav > li.ui-tabs-selected, .NBwidget > .ui-tabs-nav > li.ui-tabs-active, .NBwidget > .ui-tabs-nav > li.ui-state-hover {
+    background-color: #546e7a!important;
+    border-radius: 2px 2px 0px 0px;
+    z-index: 1;
+}
+
+.NBwidget > .ui-tabs-nav > li.ui-tabs-selected::before, .NBwidget > .ui-tabs-nav > li.ui-tabs-active::before, .NBwidget > .ui-tabs-nav > li.ui-state-hover::before,
+.NBwidget .ui-tabs-nav li.ui-tabs-selected::after, .NBwidget .ui-tabs-nav li.ui-tabs-active::after, .NBwidget .ui-tabs-nav li.ui-state-hover::after {
+    border-bottom:28px solid #546e7a;
+}
+
+.NBwidget > .ui-tabs-nav > li {
+    margin: 0px 10px 1px 0px!important;
+}
+
+@media (min-width: 374px) and (max-width: 411px) {
+    .NBwidget > .ui-tabs-nav > li {
+        margin: 0px 5px 1px 0px!important;
+    }
+}
+
+@media (max-width: 373px) {
+    .NBwidget > .ui-tabs-nav > li {
+        margin: 0px 2px 1px 0px!important;
+    }
+}
+
+.NBwidget > .ui-tabs-nav > li::before, .NBwidget > .ui-tabs-nav > li::after {
+    content: '';
+    width: 0;
+    height: 0;
+    border-bottom:28px solid #93a3ab;
+    transition: inherit;
+    position: absolute;
+}
+
+@media (min-width: 366px) and (max-width: 600px) {
+    .NBwidget > .ui-tabs-nav > li::before, .NBwidget > .ui-tabs-nav > li::after,
+    .NBwidget > .ui-tabs-nav > li.ui-tabs-selected::before, .NBwidget > .ui-tabs-nav > li.ui-tabs-active::before, .NBwidget > .ui-tabs-nav > li.ui-state-hover::before,
+    .NBwidget .ui-tabs-nav li.ui-tabs-selected::after, .NBwidget .ui-tabs-nav li.ui-tabs-active::after, .NBwidget .ui-tabs-nav li.ui-state-hover::after {
+        border-bottom-width: 24px;
+    }
+}
+
+@media (max-width: 365px) {
+    .NBwidget > .ui-tabs-nav > li::before, .NBwidget > .ui-tabs-nav > li::after,
+    .NBwidget > .ui-tabs-nav > li.ui-tabs-selected::before, .NBwidget > .ui-tabs-nav > li.ui-tabs-active::before, .NBwidget > .ui-tabs-nav > li.ui-state-hover::before,
+    .NBwidget .ui-tabs-nav li.ui-tabs-selected::after, .NBwidget .ui-tabs-nav li.ui-tabs-active::after, .NBwidget .ui-tabs-nav li.ui-state-hover::after {
+        border-bottom-width: 22px;
+    }
+}
+
+ .NBwidget > .ui-tabs-nav > li {
+    border-radius: 2px 2px 0px 0px;
+     background-color: #93a3ab;
+}
+
+.NBwidget > .ui-tabs-nav > li::before
+{
+border-left: 7px solid transparent;
+left: -8px;
+}
+
+.NBwidget > .ui-tabs-nav > li::after {
+    border-right: 7px solid transparent;
+    right: -8px;
+    z-index: 1;
+}
+
+.NBwidget > .ui-tabs-nav > li > a {
+    padding: 4px 1em!important;
+}
+
+.NBwidget td label {
+    font-size: 12px!important;
+}
+
+.NBwidget > .ui-tabs-nav {
+    padding: 0.2em 7px 0!important;
+    border-bottom: 3px solid #546e7a;
+}
+
 /************************/
