--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -1254,4 +1254,26 @@ background-image: url("/javax.faces.resource/images/customblackicon.png.xhtml?ln
 	border-bottom: 3px solid #009abb;
 }
 
+.advButton {
+	border-radius: 30px!important;
+	margin: 0px 5px;
+}
+
+@media (max-width: 366px) and (min-width: 320px) {
+	.advButton {
+		margin: 0px 0px;
+	}
+}
+
+.advButton > span {
+	border-radius: 30px!important;
+	background: #f5f5f5!important;
+	color: #607D8B;
+	border: solid 2px #009abb;
+	font-size: 13px;
+}
 /********************/
+
+.AdvTabNBWidget {
+	background-color: transparent!important;
+}
