--- a/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
@@ -354,8 +354,8 @@ img.riskImage:hover {
     }
 
     .ui-tabs .ui-tabs-panel {
-        padding-left:0px;
-        padding-right: 20px;
+        padding-left: 5px;
+        padding-right: 5px;
     }
 
     .FSResponsiveFA {
@@ -377,7 +377,7 @@ img.riskImage:hover {
     }
     .ui-tabs .ui-tabs-panel {
         padding-left:0px;
-        padding-right: 20px;
+        padding-right: 0px;
     }
 }
 
@@ -2862,6 +2862,7 @@ border: solid 1px #000000!important;
 .InfoNewDash > button > span:nth-child(2) {
     background: #ECEFF1!important;
     color: #778D9B!important;
+    border: 2px solid #009abb;
     border-radius: 40px!important;
     font-size: 13px;
 }
@@ -3214,3 +3215,6 @@ left: -8px;
 }
 
 /************************/
+.backgroundAdvPortlets {
+    background-color: #fbfcfd!important;
+}
