Checked in 06/02/2017 (UOB)

--- a/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
+++ b/Invessence/modules/web/src/main/webapp/resources/tcm/1_0/css/tcm.css
@@ -1233,6 +1233,7 @@ img.riskImage:hover {
 
 @media (max-width: 744px) {
 	.dsahboardEditDropdownBlock {
+        display: block;
 	position: absolute;
     right: 0;
     margin-top: -85px;
