--- a/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
+++ b/Invessence/modules/web/src/main/webapp/resources/primefaces-invessence/theme.css
@@ -1264,7 +1264,7 @@ hr.ui-widget-header{background-color: #E5EBF0; border-width:0px;}
 
 /*Style For UI InputField ------------------------------------------------------------------------------------- */
 
-.ui-inputfield{color:#778D9B; font-size:14px; font-family: 'ralewaymedium' !important; padding:9px !important; border:solid 1px #C6D6DF; -webkit-transition: all 0.5s ease;
+.ui-inputfield{color:#778D9B; font-size:14px; font-family: 'ralewaymedium' !important; padding:7px 9px !important; border:solid 1px #C6D6DF; -webkit-transition: all 0.5s ease;
 -moz-transition: all 0.5s ease; -ms-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; background-color: #EDF3F6;
 border-radius:3px; -webkit-border-radius:3px; -moz-border-radius:3px;}
 .ui-inputfield.ui-state-hover, .ui-inputfield.ui-state-focus{border:solid 1px #5fcf80; color:#5fcf80 !important; background-color: #F9FBFC;}
@@ -1409,7 +1409,7 @@ ui-message-fatal{color: #F55151 !important; background-color: #FBFCFD !important
 	
 /*Style For SelectOneMenu And SelectCheckBoxMenu ------------------------------------------------------------------------------------- */
 
-.ui-selectonemenu.ui-state-focus .ui-selectonemenu-label{background-color:#f9fbfc !important;}
+.ui-selectonemenu.ui-state-focus .ui-selectonemenu-label{background-color:transparent !important;}
 .ui-selectonemenu .ui-selectonemenu-label{width: 98% !important;}
 .ui-selectonemenu, .ui-selectcheckboxmenu{font-size:16px !important; font-family: 'titillium_webregular' !important; padding:0px 15px 0px 0px !important; border:solid 1px #D1D3D4 !important; -webkit-transition: all 0.5s ease;
 				 -moz-transition: all 0.5s ease; -ms-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease; color: #778D9B; border-radius:3px; -webkit-border-radius:3px; -moz-border-radius:3px;}
@@ -1427,7 +1427,7 @@ ui-message-fatal{color: #F55151 !important; background-color: #FBFCFD !important
                                                     -moz-border-radius:0px !important; margin:0px !important; color: #6C7A83; padding: 6px !important; -webkit-transition: all 0.5s ease; 
                                                     -moz-transition: all 0.5s ease; -ms-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease;
                                                     background-color: #E5EAEF;}
-.ui-selectonemenu-panel .ui-state-highlight, .ui-selectcheckboxmenu-panel .ui-state-highlight{color:#71CC8D !important; background-color: #fff;}
+.ui-selectonemenu-panel .ui-state-highlight, .ui-selectcheckboxmenu-panel .ui-state-highlight{color:#000000 !important; background-color: #fff;}
 .ui-selectonemenu-panel .ui-state-hover, .ui-selectcheckboxmenu-panel .ui-state-hover{ background-color:#ffffff !important; -webkit-transition: all 0.5s ease;
 										-moz-transition: all 0.5s ease; -ms-transition: all 0.5s ease; -o-transition: all 0.5s ease; transition: all 0.5s ease;}
 	.ui-selectonemenu-trigger .ui-icon-triangle-1-s, .ui-selectcheckboxmenu-trigger .ui-icon-triangle-1-s{ background-image:url("#{resource['primefaces-spark:images/downarrow.svg']}") !important; margin-top:10px !important;
@@ -1633,7 +1633,7 @@ ui-message-fatal{color: #F55151 !important; background-color: #FBFCFD !important
 /*Style For Spinner --------------------------------------------------------------------------------------*/
 
 .ui-spinner{}
-.ui-spinner .ui-spinner-input{text-align:left; padding:9px !important;}
+.ui-spinner .ui-spinner-input{text-align:left; padding:7px 9px !important;}
 .ui-spinner .ui-spinner-up{margin-top:3px !important;}
 .ui-spinner .ui-spinner-button{width:auto; height:17px; margin:2px 3px 2px 0px; border-radius: 2px !important; cursor:pointer;}
 .ui-spinner .ui-spinner-down .ui-button-text{margin-top:2px;}
