--- a/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
+++ b/Invessence/modules/web/src/main/webapp/resources/uob/1_0/css/uob.css
@@ -612,14 +612,14 @@ img.riskImage:hover {
 
 
 .ProjectionSlabHeight_Selected {
-    background: #025d3c!important;
+    background: #546e7a!important;
     color: white!important;
     height: 50px;
     text-align: left;
 }
 
 .triangleShape_Selected {
-    border-right: 15px solid #025d3c!important;
+    border-right: 15px solid #546e7a!important;
 }
 
 @media (max-width: 1205px) {
@@ -913,7 +913,7 @@ img.atCheckMarkImg {
 }
 
 .getStartedBtn > span {
-    background:#025d3c!important;
+    background:#546e7a!important;
 }
 
 .loginStartedBtn > span {
@@ -955,7 +955,7 @@ img.atCheckMarkImg {
 .ProjectionChartRadioAssets > .ui-radiobutton-box > .ui-radiobutton-icon {
     width: 11px!important;
     height: 11px!important;
-    border: solid 2px #025d3c!important;
+    border: solid 2px #546e7a!important;
     background: #ffffff;
 }
 
@@ -964,7 +964,7 @@ img.atCheckMarkImg {
 }
 
 .ui-icon-bullet {
-    background-color: #025D3C!important;
+    background-color: #546e7a!important;
 }
 
 #layout-topbar {
@@ -972,7 +972,7 @@ img.atCheckMarkImg {
 }
 
 .BBGreen {
-    color:#025d3c;
+    color:#546e7a;
 }
 
 .BBDarkGray {
@@ -1139,8 +1139,8 @@ Panel-UI > div {
 }
 
 .ui-selectonemenu-panel {
-    border-top: solid 3px #005A37 !important;
-    border-bottom: solid 3px #005A37 !important;
+    border-top: solid 3px #546e7a !important;
+    border-bottom: solid 3px #546e7a !important;
 }
 
 .ui-selectonemenu-panel .ui-selectonemenu-list-item {
@@ -1151,7 +1151,7 @@ Panel-UI > div {
 }
 
 .ui-selectonemenu-items > .ui-state-hover {
-    background: #025d3c !important;
+    background: #546e7a !important;
     color: white;
 }
 
@@ -1487,7 +1487,7 @@ body {
 }
 
 .portfolioCreationStepsPanel > ul > .ui-state-highlight {
-    background-color: #025d3c !important;
+    background-color: #546e7a !important;
 }
 
 .portfolioCreationStepsPanel > ul > .ui-state-disabled {
@@ -2634,11 +2634,21 @@ h3 {
 
 
 /**Prakash_UOB**/
+
+
 .uob_block1 > div > fieldset > legend {
-	background: #e8e7e7;
+	/*background: #e8e7e7;
     border-radius: 0;
     color: #004D40;
-    border-left: 4px solid #26A69A;
+    border-left: 4px solid #26A69A;*/
+    background: white;
+    border-radius: 5px 5px 0px 0px;
+    color: #004D40;
+    position: relative;
+    border-bottom: 0!important;
+    border: 4px solid #26A69A;
+    top: -11px;
+    padding: 5px 10px 2px 10px!important;
 }
 
 .uob_block1 > div > fieldset > legend > span {
@@ -2678,7 +2688,7 @@ color: #ffffff!important;
 }
 
 .uob_Block_tabs > .ui-panel-content {
-	    border: 3px solid #26a69a!important;
+	    border: 0px;
 }
 
 .ui-button-text, .ui-selectonemenu-trigger {
@@ -2716,10 +2726,11 @@ background: #26a69a;
 }
 
 .uob_Box {
-    background: #e8e7e7;
+    background: #ffffff;
     border-radius: 0;
     border: 0;
-    box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.04);
+    border-left: 5px solid #546e7a;
+    box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.15);
 }
 
 .uob_Box1 {
@@ -2760,7 +2771,7 @@ background: #26a69a;
 }
 
 .uobCoreLabel {
-    font-size: 14px;
+    font-size: 13px;
     padding: 10px 0;
 }
 
@@ -2769,7 +2780,7 @@ background: #26a69a;
 }
 
 .uob_selectDropdown > label {
-	padding: 9px 9px!important;
+	padding: 7px 9px!important;
     background: none!important;
 }
 
@@ -2793,11 +2804,14 @@ border: 4px solid #26a69a !important;
 }
 
 .ui-inputfield.ui-state-hover, .ui-inputfield.ui-state-focus {
-border: solid 1px #000000!important;
+border: solid 1px #546e7a!important;
+    color: #000000!important;
 }
 
 .ui-inputfield {
-    font-size: 14px!important; /*To remove the important priority from custom.css:93 fro UOB*/
+    font-size: 13px!important; /*To remove the important priority from custom.css:93 for UOB*/
+    border-radius: 0;
+    box-shadow: 1px 1px 1px rgba(0, 0, 0, 0.1) inset;
 }
 
 .uobSliderLabel {
@@ -3121,11 +3135,11 @@ border: solid 1px #000000!important;
 }
 
 .input, .ui-selectonemenu, .ui-selectcheckboxmenu {
-color: #025d3c!important;
+color: #546e7a!important;
 }
 
-.ui-selectcheckboxmenu.ui-state-focus, .ui-selectonemenu.ui-state-focus {
-    border:solid 1px #000000!important;
+.uob_selectDropdown.ui-state-focus, .uob_selectDropdown.ui-state-focus, .uob_selectDropdown.ui-state-hover {
+    border:solid 1px #546e7a!important;
 }
 
 .uob_ceditTab_Block .ui-tabs-nav li.ui-tabs-selected, .uob_ceditTab_Block .ui-tabs-nav li.ui-tabs-active, .uob_ceditTab_Block .ui-tabs-nav li.ui-state-hover {
@@ -3218,3 +3232,28 @@ left: -8px;
 .backgroundAdvPortlets {
     background-color: #fbfcfd!important;
 }
+
+.uobBoldText {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.uobSubText {
+    font-size: 12px;
+    padding: 2px 0px;
+}
+
+.liabilityCenterContent_uob table {
+    margin: 0 auto!important;
+}
+
+.uob_Block_tabs > div > div > .ui-tabs-panels {
+    border: 3px solid #546e7a;
+    border-top: 0!important;
+    height: 268px;
+}
+
+/*
+.NBwidget > .ui-tabs-panels {
+    border: 3px solid #546e7a;
+}*/
