--- a/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
+++ b/Invessence/modules/web/src/main/webapp/template/common/simple.xhtml
@@ -20,6 +20,7 @@
     <h:outputScript name="js/ripple-effect.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/perfect-scrollbar.js" library="#{uiLayout.themeLib}"/>
     <h:outputScript name="js/layout.js" library="#{uiLayout.themeLib}"/>
+    <link rel="shortcut icon" type="image/x-icon" href="#{uiLayout.webProfile.feviconLogoPath}" />
 
     <ui:insert name="head" />
 </h:head>
