Checked in 09/02/2017 (UOB) - Prakash Lal

--- a/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
+++ b/Invessence/modules/web/src/main/webapp/resources/invessence/css/invessence.css
@@ -811,7 +811,7 @@ a.ui-menuitem-link.ui-corner-all {
 
 
 #layout-menu .ui-button.ui-state-hover .ui-button-text {
-	background-color: #009abb!important	;
+	background-color: #009abb;
 }
 
 
